login, signup footer alignment issue resolved

--- a/css/login.css
+++ b/css/login.css
@@ -7,7 +7,7 @@ body {
 }
 
 #loginDiv {
-    margin: 100px auto auto;
+    margin: 70px auto;
     padding: 60px 20px 30px;
     max-width: 400px;
     display: flex;
@@ -18,6 +18,6 @@ body {
 
 @media screen and (max-width: 480px) {
     #loginDiv {
-        margin: 130px auto auto;
+        margin: 120px auto;
     }
 }
